--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
@@ -20,8 +22,11 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.65.0",
     "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.1",
     "tailwindcss": "^4.1.13",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -35,6 +40,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "tw-animate-css": "^1.4.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.11"
   }
 }
